tests/NormalTests/paczka2/big_fuzzy/39657998.err
Error in line 3: N61B A968 15,8
Error in line 4: YCfz8i15W S455 37,2
Error in line 13: A939 S455 9,1
Error in line 16: YCfz8i15W A968 59,8
Error in line 9: 69DlSmS S455 3,5
Error in line 23: 7amN A939 91,3
Error in line 35: 7amN A968 10,4
Error in line 44: 69DlSmS S455 27,9
Error in line 41: DvFpvme A968 62,5
Error in line 57: YCfz8i15W A968 29,8
Error in line 59: 69DlSmS A968 70,8
Error in line 71: YCfz8i15W S455 24,3
Error in line 72: YCfz8i15W A968 61,8
Error in line 73: 7amN A968 76,4
Error in line 97: DvFpvme S455 67,0
Error in line 96: qPZk A968 2,1
Error in line 99: DvFpvme A939 97,9
Error in line 103: 69DlSmS A968 10,5
Error in line 102: qPZk S455 11,3
Error in line 109: 69DlSmS A939 80,2
Error in line 113: 69DlSmS S50 35,3
Error in line 120: A939 S455 895,8
Error in line 125: qPZk A968 52,3
Error in line 129: qPZk A939 89,4
Error in line 130: qPZk A968 0,3
Error in line 132: 69DlSmS S455 25,9
Error in line 131: qPZk S50 99,8
Error in line 151: 69DlSmS A968 11,1
Error in line 149: 7amN S455 8,3
Error in line 165: N61B A939 52,2
Error in line 166: N61B S50 59,1
Error in line 167: DvFpvme A939 30,5
Error in line 164: 69DlSmS A968 44,1
Error in line 175: 69DlSmS S50 37,1
Error in line 178: qPZk A939 36,3
Error in line 170: DvFpvme S455 87,2
Error in line 181: qPZk S50 18,6
Error in line 186: qPZk A939 6,8
Error in line 182: N61B S455 64,5
Error in line 188: qPZk S455 66,7
Error in line 191: qPZk A939 69,9
Error in line 204: YCfz8i15W A939 75,5
Error in line 199: qPZk S455 96,5
Error in line 210: DvFpvme S50 10,8
Error in line 212: DvFpvme S455 68,0
Error in line 215: DvFpvme A939 68,22
Error in line 217: 7amN S455 14,2
Error in line 214: DvFpvme A939 15,6
Error in line 216: YCfz8i15W S455 46,8
Error in line 220: DvFpvme S50 60,9
Error in line 226: A939 A939 45,5
Error in line 225: N61B S50 59,1
Error in line 228: N61B A939 21,3
Error in line 227: A939 S455 95,7
Error in line 219: 7amN A968 56,6
Error in line 238: N61B S50 111,2
Error in line 237: qPZk A939 93,2
Error in line 234: 7amN A939 76,3
Error in line 242: qPZk S50 36,5
Error in line 246: qPZk S455 71,8
